--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -1,10 +1,7 @@
 {
     "logout_button": "লগ আউট",
-    "note": "বিঃদ্রঃ",
-    "cancel": "বাতিল করুন",
-    "yes": "হ্যাঁ",
-    "delete": "মুছে ফেলা",
-    "item": "আপনার কাছে %d টি আইটেম আছে",
-     "add_address":"ঠিকানা যোগ করুন"
+    "no_data_found":"No Data Found",
+    "error_occured":"Error occured"
+    
 
 }
