--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,12 +1,8 @@
 {
 
     "logout_button": "Log out",
-    "note": "Note",
-    "cancel": "Cancel",
-    "yes": "Yes",
-    "delete": "Delete",
-    "item": "You have %d item",
-    "add_address":"Add Adress"
+    "no_data_found":"No Data Found",
+    "error_occured":"Error occured"
 
 
 }
